--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-google-login": "^5.0.2",
+    "react-redux": "^7.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-stripe-elements": "^2.0.3",
     "recompose": "^0.30.0",
+    "redux": "^4.0.1",
     "semantic-ui-react": "^0.85.0"
   },
   "scripts": {
@@ -30,5 +32,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "redux-devtools": "^3.5.0"
+  }
 }
